2009-02-26  Badlop  <badlop@process-one.net>

	* doc/guide.tex: No mention to the release date in ejabberd Guide
	or release notes. The date of an ejabberd release is determined by
	the date of the corresponding release announcement.

2009-02-25  Badlop  <badlop@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix incorrect implementation of
	Pubsub payload requirements (thanks to Andy Skelton)(EJAB-823)

2009-02-24  Badlop  <badlop@process-one.net>

	* src/ejabberd_listener.erl: Fix report message of 'undef' error

2009-02-23  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_c2s.erl: Do not call mod_caps:clear_caps, this previous
	optimization is too agressive and breaks PubSub/PEP standard behavior
	(EJAB-854)

2009-02-23  Alexey Shchepin  <alexey@process-one.net>

	* src/web/ejabberd_http.erl: Added a workaround for inet:peername
	returning 'ebadf'

2009-02-20  Badlop  <badlop@process-one.net>

	* src/ejabberd_listener.erl: When stopping a listener, don't stop
	the listener supervisor (EJAB-874)

2009-02-19  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix nodetree plugin resolver

2009-02-17  Badlop  <badlop@process-one.net>

	* src/ejabberd_listener.erl: More error detections

2009-02-16  Badlop  <badlop@process-one.net>

	* src/ejabberd_config.erl: Check certfiles are readable on server
	start and listener start (EJAB-753)
	* src/ejabberd_listener.erl: Likewise

	* src/mod_privacy.erl: Privacy List: deny presence-out all + send
	presence to: presence is sent (EJAB-255)
	* src/ejabberd_c2s.erl: Likewise

	* src/mod_muc/mod_muc_room.erl: Owner of a password protected room
	must provide the password, like other participants (EJAB-867)

	* src/mod_muc/mod_muc_log.erl: Prevent XSS in MUC logs by
	linkifying only a few known protocols (EJAB-850)

	* src/mod_muc/mod_muc.erl: Export function to create MUC
	room (thanks to Eric Cestari) (EJAB-729)
